styles/main.css
/****** GLOBAL ******/
    * {
        font-family: 'Lexend', sans-serif;
    }
    hr {
        color: #475826;
    }
    body {
        background-color: #FAF0E1;
        min-height: 100vh;
        min-width: 100vw;
    }

/* Airrick added this remove if it mucks up things*/
    body {
        display: flex;
        flex-direction: column;  
    }

    main {
        flex-grow: 1;
    }

/****** Helper ******/
    .flex {
        display: flex;
    }
    .flex-start {
        align-content: flex-start;
    }
    .alight-end {
        align-items: flex-end;
    }
    .flex-middle {
        justify-content: center;
    }
    .flex-row {
        flex-direction: row;
    }
    .flex-between {
        justify-content: space-between;
    }
    .flex-around {
        justify-content: space-around;
    }
    .center {
        align-items: center;
    }
    .strech {
        align-items: stretch;
    }

    .flex-end {
        justify-content: flex-end;
    }
    .menu a {
        text-decoration: none;
        justify-content: space-around;
        color:#475826;
    }
    .left-pad {
        padding-left: .1rem;
    }

    .right-pad {
        padding-right: .75rem;
    }
    .top-pad {
        padding-top: .75rem;
    }


/****** MAIN ******/
    .page-content {
        width: 100%;
        padding-top: 2rem;
        /* padding-bottom: 5rem; */
    }
    .about-page-content {
        width: 100%;
        padding-top: 2rem;

    }
    .about-page-content h2 {
        padding-bottom: 2rem;
    }
    .about-page-content p {
        padding-bottom: 1.5rem;
        line-height: 1.5rem;
    }

    .intro {
        padding-left: 2rem;
        padding-right:2rem;
        justify-content: space-around;
        z-index: 400;
        align-self: center;
    }
    .intro p{
        font-weight: 100;
    }
    .container {
        display: flex;

    }
    .welcome {
        padding-bottom: 3rem;
        overflow: hidden;
        height: auto;
        
    }
    .about {
        display: flex;
        justify-content: center;
    }
    .discipline-intro {
        margin: 3rem;
    }
    .cato-section {
    display: block;
    padding-bottom: 3rem;
}
.petuina-bio {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.petuina-bio ul {
    margin-left: -10px;
}
.pitch {
    padding-top: 1rem;
}

/****** IMAGES ******/
    .head-shot {
        position: relative;
        border-radius: 50%;
        margin-left: 3rem;
        margin-bottom: 1rem;
        height: 200px;
        width: 200px;
        z-index: 400;
    }
    .about-selfie{
        height: 200px;
        width: auto;
        margin-bottom: 2rem;
        display: flex;
        justify-content: center;
    }
    .card-img .banner_small{
        display: none;
    }
    .card-img .banner {
        display: block;
    }
    .petuina-circle {
        display: block;
        height: 250px;
        width: auto;
        border-radius: 50%;
        display: flex;
        justify-content: space-around;
        margin-top: 1rem;
        margin-bottom: 1rem;
    }
    .petuina {
        display: block;
        margin-left: auto;
        margin-right: auto;
        height: 300px;
        width: auto;
        padding: 1rem;
    }
    .cato-logo {
        max-width: 200px;
        display: flex;
        margin: 0 auto;
        padding-top: 1rem;
        padding-bottom: 1rem;
    }

/********* ARTIFACT IMAGES *********/
.maitaime_banner{
    width: 100%;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2rem;
    margin-bottom: 1rem;

}
    .amazon-logo {
        width: 100%;
        height: auto;
        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-top: 2rem;
        margin-bottom: 1rem;
    }
    .glamazon-logo {
        height: auto;
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 100%;
        margin-top: 2rem;
        margin-bottom: 1rem;
    }
    .artifact-banner {
        width: 100vw;
        height: auto;
        display: block;
        margin-top: -2rem;
    }
    .art-con img{
        padding-bottom: 1 2rem 2rem 1rem;
    }
    .thumb-img {
        margin: 1rem;
        max-width: 100px;
    }
    .cato-wireframes {
        display: flex;
        flex-direction: column;
        align-items: center;
    }



/****** TYPOGRAPHY ******/
    h1 {
        color: #475826;
    }
    h2 {
        color: #475826;
    }
    h3 {
        color: #475826;
        font-size: 2.5rem;
    }
    h4 {
        color: #475826;
    }
    h5 {
        color: #475826;
    }
    p {
        color: #475826;
        font-weight: 200;
        font-size: 1.2rem;
    }
    .a {
        text-decoration: none;
    }
     .intro h1 {
        font-weight: 200;
        font-size: 1rem;
        letter-spacing: .1rem;
        line-height: 1.4rem;
    }
    .intro h2 {
        font-weight: 700;
        font-size: 1.2rem;
        letter-spacing: .2rem;
        line-height: 1.2rem;
        
    }
    .intro p {
        font-weight: 200;
        font-size: 1rem;
        letter-spacing: .1rem;
        line-height: 1.5rem;

    }
    .main-timeline9 a {
        text-decoration: none;
        color: #B97831;
    }
    .art-con a{
        text-decoration: none;
        color: #B97831;
    }
    .feat-head {
        padding: 1.5rem 0rem 1.5rem 0rem;
        letter-spacing:.2rem; 
        display: flex; 
    }
    hr{
        /* width: 60%; */
        border-color: #475826;
    }
    span {
        font-size: 45px;
      }
    .discipline-intro h2 {
        font-weight: 700;
        font-size: 2rem;
        letter-spacing: .2rem;
        padding-bottom: .3rem;
    }  
    .discipline-intro h1 {
        font-weight: 400;
        font-size: .8rem;
        letter-spacing: .2rem;
    }
    .cato-section h2 {
        font-weight: 400;
        font-size: 1.2rem;
        line-height: 3rem;
    }
/* ... */

